// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > has 'base' ('md') button 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-md rounded-md"
  >
    base button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'large' ('lg') button 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-lg rounded-md"
  >
    large button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'small' ('sm') button 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-sm rounded-md"
  >
    small button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'tiny' ('xs') button 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-xs rounded-md"
  >
    tiny button
  </button>
</DocumentFragment>
`;

exports[`Button > has a label 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
  >
    Hello, World 🌍
  </button>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'link' tag 1`] = `
<DocumentFragment>
  <a
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as link
  </a>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'paragraph' tag 1`] = `
<DocumentFragment>
  <p
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as paragraph
  </p>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'span' tag 1`] = `
<DocumentFragment>
  <span
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as span
  </span>
</DocumentFragment>
`;

exports[`Button > has accent variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-accent shadow-sm hover:shadow-md hover:shadow-accent/20 min-h-fit h-10 rounded-md"
  >
    accent button
  </button>
</DocumentFragment>
`;

exports[`Button > has default variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-default shadow-sm hover:shadow-md min-h-fit h-10 rounded-md"
  >
    default button
  </button>
</DocumentFragment>
`;

exports[`Button > has error variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-error shadow-sm hover:shadow-md hover:shadow-error/20 min-h-fit h-10 rounded-md"
  >
    error button
  </button>
</DocumentFragment>
`;

exports[`Button > has ghost variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-ghost hover:bg-base-200/80 min-h-fit h-10 rounded-md"
  >
    ghost button
  </button>
</DocumentFragment>
`;

exports[`Button > has info variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-info shadow-sm hover:shadow-md hover:shadow-info/20 min-h-fit h-10 rounded-md"
  >
    info button
  </button>
</DocumentFragment>
`;

exports[`Button > has neutral variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-neutral shadow-sm hover:shadow-md hover:shadow-neutral/20 min-h-fit h-10 rounded-md"
  >
    neutral button
  </button>
</DocumentFragment>
`;

exports[`Button > has no outline 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
  >
    Button has no outline
  </button>
</DocumentFragment>
`;

exports[`Button > has outline 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-outline min-h-fit h-10 rounded-md border-base-content/20"
  >
    Button has outline
  </button>
</DocumentFragment>
`;

exports[`Button > has primary variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-primary shadow-sm hover:shadow-md hover:shadow-primary/25 min-h-fit h-10 rounded-md"
  >
    primary button
  </button>
</DocumentFragment>
`;

exports[`Button > has secondary variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-secondary shadow-sm hover:shadow-md hover:shadow-secondary/20 min-h-fit h-10 rounded-md"
  >
    secondary button
  </button>
</DocumentFragment>
`;

exports[`Button > has success variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-success shadow-sm hover:shadow-md hover:shadow-success/20 min-h-fit h-10 rounded-md"
  >
    success button
  </button>
</DocumentFragment>
`;

exports[`Button > has warning variant 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-warning shadow-sm hover:shadow-md hover:shadow-warning/20 min-h-fit h-10 rounded-md"
  >
    warning button
  </button>
</DocumentFragment>
`;

exports[`Button > is not wide 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] min-h-fit h-10 rounded-md"
  >
    Button is not wide
  </button>
</DocumentFragment>
`;

exports[`Button > is wide 1`] = `
<DocumentFragment>
  <button
    class="btn transition-all duration-200 ease-out active:scale-[0.97] btn-wide min-h-fit h-10 rounded-md"
  >
    Button is wide
  </button>
</DocumentFragment>
`;
